# aws_terraform_interview

./: .gitignore  README.md  pyproject.toml
authorizer_lambda/: README.md  id_rsa  id_rsa.pub  pyproject.toml
authorizer_lambda/src/authorizer_lambda/: cognito_adapter.py  config.py  main.py  models.py
authorizer_lambda/tests/: test_handler.py  test_verify_cognito_token.py  test_verity_dev_token.py
authorizer_lambda/tests/data/: authorization_request.json
dynamodb/: README.md  access_patterns.md
terraform/: .tool-versions
terraform/environments/dev/: .terraform.lock.hcl  README.md  issues.md  issues.txt  main.tf  terraform.tf  variables.tf
terraform/modules/cicd/: README.md  main.tf  terraform.tf  variables.tf
